# robotic_hw_soln

./: package.xml  setup.cfg  setup.py
machina_interfaces/: CMakeLists.txt  package.xml
machina_interfaces/srv/: RequestSensorData.srv
machina_soln/: sensor.py  sensor_client.py  sensor_publishers.py  sensor_service.py  setup.cfg  setup.py
machina_soln/machina_soln/: sensor.py  sensor_client.py  sensor_service.py
machina_sols/: package.xml
machina_sols/machina_soln/: sensor_client.py
