<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>machina_soln</name>
  <version>0.0.0</version>
  <description>soluotion to robotic_hw</description>
  <maintainer email="aihoque2@illinois.edu">ahoque245</maintainer>
  <license>Apache License 2.0</license>

  <depend>machina_interface</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
